src/grid/snapshots/equilibrium__grid__shape__tests__O tetromino.snap
---
source: src/grid/shape.rs
expression: outline
---
[
    Qr {
        x: 0,
        y: -1,
    },
    Qr {
        x: 2,
        y: -1,
    },
    Qr {
        x: 2,
        y: 1,
    },
    Qr {
        x: 0,
        y: 1,
    },
]
